(docs) Add initial pages.

--- a/docs/apps/pages/pages/components/presentation/index.mdx
+++ b/docs/apps/pages/pages/components/presentation/index.mdx
@@ -1,8 +1,6 @@
----
-id: 'presentation'
-title: 'Presentation'
----
-Presentation templates are located typically at `apps/storybook/patterns/type/`. 
+# Presentation
+
+Presentation templates are located typically at `apps/storybook/patterns/type/`.
 They are useful to present a combination of components. A very typical use case are the pages in atomic design.
 
 <b>A Presentation component contains:</b>
