--- a/docs/apps/pages/pages/components/twig/index.mdx
+++ b/docs/apps/pages/pages/components/twig/index.mdx
@@ -1,13 +1,10 @@
----
-id: 'twig'
-title: 'Twig only'
----
+# Twig only
 
 A Twig only component works without any wingsuit YAML file. The patterns are useful if you don't need or don't want a UI Pattern integration.
 
-A typical use case for Twig only components are menu or header components. 
+A typical use case for Twig only components are menu or header components.
 
-The data for these components can be provided as variables or defined globally inside YAML files in `apps/storybook/data`. So typically 
+The data for these components can be provided as variables or defined globally inside YAML files in `apps/storybook/data`. So typically
 
 <b>A twig only component contains:</b>
 * index.js
