--- a/docs/apps/pages/pages/configurations/custom-webpack-config/index.mdx
+++ b/docs/apps/pages/pages/configurations/custom-webpack-config/index.mdx
@@ -1,12 +1,9 @@
----
-id: 'custom-webpack-config'
-title: 'Custom webpack configuration'
----
+# Custom webpack configuration
 
 ## Overview
 
 Add a `webpack hook` to your wingsuit.config.js if you want to extend the webpack configuration:
- 
+
 ```js
 module.exports = {
   webpack: function(appConfig) {
@@ -19,18 +16,18 @@ module.exports = {
     ....
   }
 }
-``` 
+```
 If you want to alter the final config, use the `webpackFinal hook`:
 
 ```js
 module.exports = {
   webpackFinal: function(appConfig, webpack) {
     // Alter final webpack config.
-    return webpack; 
+    return webpack;
   },
   ...
   designSystem: {
     ....
   }
 }
-``` 
+```
