--- a/docs/apps/pages/pages/configurations/preset-webpack/index.mdx
+++ b/docs/apps/pages/pages/configurations/preset-webpack/index.mdx
@@ -1,7 +1,4 @@
----
-id: 'preset-webpack'
-title: 'Presets'
----
+# Presets
 
 Wingsuit uses `presets` to make webpack configurations reusable across different apps.
 
@@ -28,7 +25,7 @@ module.exports = {
   },
   webpackFinal: function(appConfig, webpack, config) {
     // Alter final webpack config.
-    return webpack; 
+    return webpack;
   }
 }
 ```
@@ -41,7 +38,7 @@ module.exports = {
 To install a preset add your preset to your `package.json` and add it to your `wingsuit.yml`:
 ```js
   module.exports = {
-    ... 
+    ...
     presets: {
       'node-module-preset-name'
     }
@@ -60,7 +57,7 @@ You can overwrite the configuration with the parameters key in your `wingsuit.ym
       'preset-name': {
         'param1': 'newValue'
       }
-    }, 
+    },
     presets: {
       "custom/Preset"
     }
