--- a/docs/apps/pages/pages/documentation/mdx/index.mdx
+++ b/docs/apps/pages/pages/documentation/mdx/index.mdx
@@ -1,8 +1,4 @@
----
-id: 'mdx'
-title: 'MDX'
----
-
+# MDX
 Let's get started with an example:
 
 ```jsx
@@ -25,14 +21,14 @@ import { PatternLoad, PatternPreview } from '@wingsuit-designsystem/storybook';
 </PatternLoad>
 ```
 (The example is from `organisms/grid/grid.mdx` in your starter kit.)
- 
+
 With `PatternLoad` you can load any existing pattern. `PatternLoad` calls the load function asynchronous after the pattern is loaded.
 `PatternPreview` renders the pattern with the preview data from the `wingsuit.yml` file. Each attribute is passed to the pattern.
 
 ### Presentational template
-To render a presentational template use: 
+To render a presentational template use:
 
-```jsx dark
+```jsx
 const template = require('./presentational.twig');
 
 <RenderTwig data={template}></RenderTwig>;
@@ -41,11 +37,11 @@ const template = require('./presentational.twig');
 
 ## Pattern documentation components
 
-<img src="images/grid-doc.png">
+<img src="images/grid-doc.png"/>
 
 ### PatternProperties
-Pattern properties shows `Fields` and `Settings` from your wingsuit.yml as a tabbed table.   
-```jsx 
+Pattern properties shows `Fields` and `Settings` from your wingsuit.yml as a tabbed table.
+```jsx
 import { PatternProperties } from '@wingsuit-designsystem/storybook';
 
 <PatternProperties variant={variant} />
@@ -58,7 +54,7 @@ import { PatternInclude } from '@wingsuit-designsystem/storybook';
 <PatternInclude variant={variant} />
 ```
 ### PatternDoc
-PatternDoc renders the complete automatic pattern documentation. 
+PatternDoc renders the complete automatic pattern documentation.
 ```jsx
 import { PatternDoc } from '@wingsuit-designsystem/storybook';
 
@@ -69,7 +65,7 @@ import { PatternDoc } from '@wingsuit-designsystem/storybook';
 ## Token documentation components
 
 ### Typeset
-To show your Typeset system use `<Typeset ..>`. 
+To show your Typeset system use `<Typeset ..>`.
 ```jsx
 const fontSizes = {
   small: '0.5rem',
@@ -79,8 +75,8 @@ const fontSizes = {
 <Typeset fontFamily={fontfamily} classNamePrefix=".text-" fontSizes={fontSizes} />
 ```
 
-### Spacing
-To show your spacing system use `<Spacing ..>`. 
+### Spacing2
+To show your spacing system use `<Spacing ..>`.
 ```jsx
 const spacing = {
   small: '0.5rem',
