--- a/docs/apps/pages/pages/assets/overview/overview.mdx
+++ b/docs/apps/pages/pages/assets/overview/overview.mdx
@@ -4,7 +4,7 @@ Wingsuit will compile all assets, which are `@import`ed inside the design system
 
 If you are missing an asset inside your `dist` folder or your webpack auto-reload is not working, check if this file is `@import`ed.
 
-You can configure the dist folder in your `wingsuit.conf.yml`. The default points `[root]/dist/app-[type]`:
+You can configure the dist folder in your `wingsuit.conf.yml`. The default points to `[root]/dist/app-[type]`:
 ```js
   apps: {
     storybook: {
