--- a/docs/apps/pages/pages/assets/svg/svg.mdx
+++ b/docs/apps/pages/pages/assets/svg/svg.mdx
@@ -18,10 +18,10 @@ To render the icons include the `svg atom` in your Twig template:
 
 ## Multiple SVG spritemaps.
 If you need more than one spritemap you can put your icons in a separate folder and extend the preset configuration in `wingsuit.yml`.
-For example, you need a spritemap for your language icons. Put all the icons in a folder called `icons-languages`.
-Now you need to configure the [svg preset](https://github.com/wingsuit-designsystem/wingsuit/blob/master/packages/core/src/server/presets/svg.ts) with multiple svg folders.
+For example, if you need a spritemap for your language icons, put all the icons in a folder called `icons-languages`.
+Then you need to configure the [svg preset](https://github.com/wingsuit-designsystem/wingsuit/blob/master/packages/core/src/server/presets/svg.ts) with multiple svg folders.
 
-Here the configuration for our `icons-languages` example:
+Here's the configuration for our `icons-languages` example:
 
  ```js
    module.exports = {
@@ -46,4 +46,4 @@ Here the configuration for our `icons-languages` example:
 
  ```
 
-After that you need to adjust `icons.mdx` file to read the new svg-languages.json.
+After that you need to adjust the `icons.mdx` file to read the new svg-languages.json.
