--- a/docs/apps/pages/pages/configurations/preset-webpack/index.mdx
+++ b/docs/apps/pages/pages/configurations/preset-webpack/index.mdx
@@ -30,7 +30,7 @@ module.exports = {
 }
 ```
 * `name` The unique name of the preset.
-* `defaultConfiguration` should return a default configuration. This configuration can be overwritten.
+* `defaultConfiguration` should return the configuration defaults. This configuration can be overwritten.
 * `webpack` should return the webpack code
 * `webpackFinal` is optional and should only be implemented if the preset needs to make changes to the final webpack.
 
@@ -48,7 +48,7 @@ To install a preset add your preset to your `package.json` and add it to your `w
 ```
 
 ## Configure a preset
-Every presets should work with zero configuration out of the box. A preset ship with a default configuration by the defaultConfiguration method.
+Each preset should work with zero configuration out of the box. A preset ships with default configuration defined by the defaultConfiguration method.
 You can overwrite the configuration with the parameters key in your `wingsuit.yml`.
 
 ```js
