--- a/docs/apps/pages/pages/assets/images/images.mdx
+++ b/docs/apps/pages/pages/assets/images/images.mdx
@@ -3,7 +3,7 @@
 
 The `apps/[app]/assets.js` includes all images. Wingsuit will compile these files to `[dist]/assets/images`.
 
-### Embedding images in Twig:
+### Embedding images in Drupal Twig
 You can use the `ws-assets` stream wrapper to get a path to the asset folder. Ensure you have the [wingsuit_companion](https://www.drupal.org/project/wingsuit_companion) module enabled.
 
 <b>Sample Twig file with an image:</b>
@@ -11,14 +11,14 @@ You can use the `ws-assets` stream wrapper to get a path to the asset folder. En
 ```twig
 <img src="{{ file_create_url('ws-assets://images/dummy.png') }}"/>
 ```
-or use the image component:
+or use the image component
 ```twig
 {% include "@atoms/image/image.wig" with {path: "images/dummy.png" }
 ```
-### Image in CSS:
-To use images inside your CSS file, use the relative path to the image. Webpack will replace the right output path.
+### Image in CSS
+To use images inside your CSS file, use the relative path to the image. Webpack will replace it with the correct output path.
 
-### Placeholder images:
+### Placeholder images
 Wingsuit supports image styles and responsive image styles for placeholder images in storybook.
 
 You can configure your image styles in your `placeholder.wingsuit.yml`
@@ -48,8 +48,8 @@ imageConfig:
 ```
 
 #### Basic image styles
-Here you can define your width and heights. If you define an width and height the image will be cropped.
-If you define only width the height will be differnt.
+Here you can define your basic image dimensions. If you define both width and height the image will be cropped.
+If you define only width the height will be resized to maintain the aspect ratio of the image, and vice versa.
 #### Breakpoints
 Under breakpoints you can define media queries which are used by responsive image styles.
 #### Responsive image styles
