--- a/docs/apps/pages/pages/components/globals/index.mdx
+++ b/docs/apps/pages/pages/components/globals/index.mdx
@@ -2,7 +2,7 @@
 
 If you need variables with global scope inside your twig template you can place a YAML file to `apps/storybook/config`.
 
-You can access every variable direct in your twig template.
+You can access every variable directly in your twig template.
 
 
 ## Frontend metadata as global variables
