--- a/docs/apps/pages/pages/components/overview/index.mdx
+++ b/docs/apps/pages/pages/components/overview/index.mdx
@@ -1,10 +1,10 @@
 # Overview
 
-Wingsuit knows following component types:
+The following component types are available with wingsuit:
 * ### Wingsuit component
-Use this component in most cases. Read [here for more infos](../wingsuit).
+Use this component in most cases. Read [here for more information](../wingsuit).
 * ### Wingsuit component with presentation template
-A Wingsuit component if you need an additional [presentation template](../presentation).
+A component if you need an additional [presentation template](../presentation).
 * ### Twig only component
 Use [Twig only](../twig) if you have a very simple template without any data.
 * ### Twig only component with presentation template
