(docs) Update next documentation.

--- a/docs/apps/pages/pages/documentation/mdx/index.mdx
+++ b/docs/apps/pages/pages/documentation/mdx/index.mdx
@@ -37,7 +37,7 @@ const template = require('./presentational.twig');
 
 ## Pattern documentation components
 
-<img src="images/grid-doc.png"/>
+<img src="/images/grid-doc.png"/>
 
 ### PatternProperties
 Pattern properties shows `Fields` and `Settings` from your wingsuit.yml as a tabbed table.
@@ -75,7 +75,7 @@ const fontSizes = {
 <Typeset fontFamily={fontfamily} classNamePrefix=".text-" fontSizes={fontSizes} />
 ```
 
-### Spacing2
+### Spacing
 To show your spacing system use `<Spacing ..>`.
 ```jsx
 const spacing = {
