--- a/docs/apps/pages/pages/guides/quick-start-guide/index.mdx
+++ b/docs/apps/pages/pages/guides/quick-start-guide/index.mdx
@@ -9,7 +9,7 @@
 
 Get started using the automated command line tool. This command creates a Wingsuit demo project, which uses the [atomic design guidelines](https://bradfrost.com/blog/post/atomic-web-design/) to structure the patterns.
 
-```shell script
+```shell
 npx @wingsuit-designsystem/cli init
 ```
 
@@ -49,15 +49,3 @@ To get started with Drupal and UI Patterns use the Wingsuit Kickstarter.
 ```shell
 composer create-project wingsuit-designsystem/wingsuit-kickstarter wingsuit-kickstarter --stability dev --no-interaction
 ```
-
-
-<div className="next-title">NEXT</div>
-<div className="next">
-<div className="next__content"><b>Drupal Kickstarter</b><br/>with UI Patterns and Layout Builder</div>
-<a className="next__button mb-2 btn btn-lg bg-green-500 mr-2 font-weight-bold" href="../../drupal/ui_patterns">Continue</a>
-</div>
-<div className="next">
-<div className="next__content"><b>Create a new component</b></div>
-<a className="next__button mb-2 btn btn-lg bg-green-500 mr-2 font-weight-bold" href="../create-component-guide">Continue</a>
-</div>
-
