--- a/docs/apps/pages/pages/drupal/ui_patterns/index.mdx
+++ b/docs/apps/pages/pages/drupal/ui_patterns/index.mdx
@@ -1,17 +1,8 @@
-# Wingsuit Kickstarter (with UI Patterns and Layout Builder)
 
 [Wingsuit Kickstarter](https://github.com/wingsuit-designsystem/wingsuit_kickstarter) is the fastest way to start with Wingsuit.
 
-The Kickstarter uses [Acquia Lightning](https://github.com/acquia/lightning) as the base distribution and [Acquia Blt](https://github.com/acquia/blt) for automation.
+The Kickstarter uses [Acquia Blt](https://github.com/acquia/blt) for automation.
 
-* #### Drupal blocks with a pattern.
-<img src="/images/add-blocks.png"/>
-
-* #### Sections are also patterns
-<img src="/images/add-sections.png"/>
-
-* #### Block Manage display with layout builder. Configure the pattern and assign fields.
-<img src="/images/configure-patterns.png"/>
 
 
 ## Prerequisites
@@ -21,10 +12,10 @@ The Kickstarter uses [Acquia Lightning](https://github.com/acquia/lightning) as 
 - [PHP `^7.0.0`](https://php.net)
 
 ## Installation
-```sh
+```bash
 composer create-project wingsuit-designsystem/wingsuit-kickstarter wingsuit-kickstarter --stability dev --no-interaction
 ```
-```sh
+```bash
 cd wingsuit-kickstarter && ./vendor/bin/blt setup
 ```
 
@@ -38,17 +29,17 @@ After login, edit the front page and open the layout builder to add more blocks.
 Click on `configure` in a section to see all settings you find in storybook.
 
 ## Development
-The kickstarter installs Wingsuit under `docroot/themes/custom` and generates all templates with `yarn build:drupal` to
+The kickstarter installs Wingsuit under `docroot/themes/custom` and generates all templates with `yarn ws build drupal` to
 `docroot/themes/custom/wingsuit/dist/app-drupal` (check `blt/blt.yml` to see the build process).
 
-You can run webpack in watch mode with `yarn dev:drupal`. (If your changes don't appear, you probably forgot to start `yarn dev:drupal`).
+You can run webpack in watch mode with `yarn ws dev drupal`. (If your changes don't appear, you probably forgot to start `yarn ws dev drupal`).
 
 The theme loads css, js and patterns from the `dist` folder, not from `source` folder.
 
 You can configure the path of your dist folder. See [Configuration details](../../configurations/details/index.md) to configure the webpack part. Open "Wingsuit settings" under Configuration in Drupal and adjust the path to the dist folder.
 
 ### Storybook
-To edit your patterns, start storybook: `yarn dev:storybook`.
+To edit your patterns, start storybook: `yarn ws dev storybook`.
 
 ## Module overview
 The following modules are used to make Wingsuit patterns available to Drupal:
@@ -59,22 +50,4 @@ The following modules are used to make Wingsuit patterns available to Drupal:
 * [ui\_patterns_settings](https://www.drupal.org/project/ui_patterns_layout_settings): Make patterns configurable.
 * [wingsuit_companion](https://www.drupal.org/project/wingsuit_companion). Locate templates inside the wingsuit `dist` folder.
 
-
-<div className="next-title">FEEDBACK</div>
-<div className="next">
-    <div className="next__content"><b>Open an issue</b><br/> if you miss something or something is not working. </div>
-    <a className="next__button mb-2 btn btn-lg bg-green-500 mr-2 font-weight-bold" target="_blank" href="https://github.com/wingsuit-designsystem/wingsuit/issues">Issue</a>
-</div>
-<div className="next">
-    <div className="next__content"><b>Open an Pull Request</b><br/> I am happy about new ideas! </div>
-    <a className="next__button mb-2 btn btn-lg bg-green-500 mr-2 font-weight-bold" target="_blank" href="https://github.com/wingsuit-designsystem/wingsuit/pulls">Pull Request</a>
-</div>
-<div className="next">
-    <div className="next__content"><b>Join on Slack</b><br/> </div>
-    <a className="next__button mb-2 btn btn-lg bg-green-500 mr-2 font-weight-bold" target="_blank" href="https://drupaltwig.slack.com/archives/C01C82BH864">Slack</a>
-</div>
-<div className="next">
-    <div className="next__content"><b>Github star</b><br/> If you like it let me know. It </div>
-    <a className="next__button mb-2 btn btn-lg bg-green-500 mr-2 font-weight-bold" target="_blank" href="https://github.com/wingsuit-designsystem/wingsuit/">Motivates me!</a>
-</div>
 
