--- a/docs/apps/pages/pages/documentation/mdx/index.mdx
+++ b/docs/apps/pages/pages/documentation/mdx/index.mdx
@@ -37,7 +37,7 @@ const template = require('./presentational.twig');
 
 ## Pattern documentation components
 
-<img src="/images/grid-doc.png"/>
+<img src="/images/grid-doc.webp"/>
 
 ### PatternProperties
 Pattern properties shows `Fields` and `Settings` from your wingsuit.yml as a tabbed table.
