--- a/docs/apps/pages/pages/presets/compression/index.mdx
+++ b/docs/apps/pages/pages/presets/compression/index.mdx
@@ -4,7 +4,7 @@ The official wingsuit compression preset adds support for gzip and brotli compre
 
 ## Installing the compression preset
 
-For most real-world projects, we recommend using this preset. In order to do so, you'll want to install the preset as a dev-dependency via `yarn` or `npm`:
+We recommend using this preset if your CMS does not support aggreation and compression. In order to do so, you'll want to install the preset as a dev-dependency via `yarn` or `npm`:
 
 ```js
 yarn add @wingsuit-designsystem/preset-compression -D
@@ -33,9 +33,8 @@ altered by using the parameters object within your wingsuit.config.js:
 
 | Prop          | Type                                | Desc                                                                                                                                 |
 |---------------|-------------------------------------|--------------------------------------------------------------------------------------------------------------------------------------|
-| gzipEnabled   | {boolean \| default: true}          | use gzip compression algorithm/function                                                                                              |
-| brotliEnabled | {boolean \| default: true}          | use brotli compression algorithm/function                                                                                            |
-| fileName      | {string \| default: '[path][base]'} | target asset filename [see for more information](https://github.com/webpack-contrib/compression-webpack-plugin/tree/v6.1.1#filename) |
+| compression   | {Compression.type 0=Brotli, 1=gzip \| default: 0}    | use gzip or brotli compression algorithm/function                                                                                              |
+| fileName      | {string \| default: '[path][base]'} | target asset filename [see for more information](https://github.com/webpack-contrib/compression-webpack-plugin/tree/v6.1.1#filename). wingsuit replaces js, css and js files with the compressed one. Add file extension here if you want seperate files. |
 
 Example configuration:
 ```js
@@ -45,12 +44,8 @@ module.exports = {
   presets: ['@wingsuit-designsystem/preset-compression'],
   parameters: {
     compression: {
-      // enable gzip algorithm (default: true)
-      gzipEnabled: true,
-      // disable brotli algorithm (default: true)
-      brotliEnabled: false,
-      // alter filename (default: [path][base])
-      fileName: '[path][base][file]',
+      compression: 0, // 1 for gzip
+      fileName: '[path][base][file].br',
     },
   },
   designSystems: {
