--- a/docs/apps/pages/pages/presets/pwa/index.mdx
+++ b/docs/apps/pages/pages/presets/pwa/index.mdx
@@ -30,14 +30,14 @@ module.exports = {
 
 ## Default behavior & customizations
 Out of the box the preset will generate multiple formats of your favicons and your `manifest.json` <b>only</b> when running a production build of <b>drupal</b>.
-It will look for a `favicon-src.png` in your `source` folder. The generated files will be placed into `/dist/[app]/images/favicons` by default. You have, however, the possibility to modify all of this by using a special `pwa` object within the `paremeters` object in your `wingsuit.config.js`.
+It will look for a `favicon.png` in your `source` folder. The generated files will be placed into `/dist/[app]/favicons` by default. You have, however, the possibility to modify all of this by using a special `pwa` object within the `paremeters` object in your `wingsuit.config.js`.
 You'll also want to define your project specific pwa values there, because their default value are set to `null`. Following props are exposed:
 
 | Prop           | Type                                            | Desc                                                                    |
 |----------------|-------------------------------------------------|-------------------------------------------------------------------------|
-| logo           | {string \| default: './source/favicon-src.png'} | Path to your source logo. Logo can be either png or svg                 |
-| prefix         | {string \| default: 'images/favicons/'}         | Prefix which gets injected into your webapp.html                        |
-| publicPath     | {string \| default: 'images/favicons/'}         | Destination of your favicons (will mostly be the same as your `prefix`) |
+| logo           | {string \| default: './source/favicon.png'}     | Path to your source logo. Logo can be either png or svg                 |
+| prefix         | {string \| default: 'favicons/'}                | Prefix which gets injected into your webapp.html                        |
+| publicPath     | {string \| default: 'favicons/'}                | Destination of your favicons (will mostly be the same as your `prefix`) |
 | appName        | {string \| default: 'null'}                     | Your application's name                                                 |
 | appDescription | {string \| default: 'null'}                     | Your application's description                                          |
 | developerName  | {string \| default: 'null'}                     | Your (or your developer's) name                                         |
@@ -51,12 +51,12 @@ module.exports = {
   presets: ['@wingsuit-designsystem/preset-pwa'],
   parameters: {
     pwa: {
-      // path to source (default: './source/favicon-src.png')
-      logo: './source/favicon-src.svg',
-      // injected prefix (default: '/images/favicons/')
-      prefix: '/img/favicons',
-      // destination (default: '/images/favicons/')
-      publicPath: '/img/favicons',
+      // path to source (default: './source/favicon.png')
+      logo: './source/favicon.png',
+      // injected prefix (default: '/favicons/')
+      prefix: '/favicons',
+      // destination (default: '/favicons/')
+      publicPath: '/favicons',
       // App Name (default: 'null')
       appName: 'My awesome app',
       // App Description (default: 'null')
@@ -64,7 +64,7 @@ module.exports = {
       // Developer Name (default: 'null')
       developerName: 'Steve Jobs',
       // Developer URL (default: 'null')
-      developerURL: 'https://keytec.de',
+      developerURL: 'https://wingsuit-designsystem.github.io/',
     },
   },
   designSystems: {
@@ -74,3 +74,5 @@ module.exports = {
   },
 };
 ```
+## Integration into your CMS
+To integrate your favicon into your CMS copy the content of `app-TYPE/webapp.html` into your html TWIG template.
