(docs) Update docs pages.

--- a/docs/apps/pages/pages/apps/pages/index.mdx
+++ b/docs/apps/pages/pages/apps/pages/index.mdx
@@ -2,6 +2,7 @@
 
 Wingsuit also ships with a pages preset, which uses `StaticSiteGeneratorPlugin` under the hood to automatically generate static files.
 
+** >> This docs page is build with Wingsuit Pages. << **
 ## Installing the pages preset
 
 To use this preset, firstly you install it as a dev-dependency via `yarn`or `npm`:
