--- a/docs/apps/pages/pages/releases/onedotone/index.mdx
+++ b/docs/apps/pages/pages/releases/onedotone/index.mdx
@@ -46,10 +46,11 @@ Thanks to [iuscare](https://github.com/iuscare) for these great presets.
 ## New App `Wingsuit Pages`
 With this new App you can build static page with Wingsuit components and feed them with MDX files.
 [Click here for more infos](/apps/pages/).
+** >> This docs page is build with Wingsuit Pages. << **
 
 ## Awesome Drupal Kickstarter
 We rebuild the Drupal Kickstarter. We removed Acquia Lightning and build a Layout Builder interface which makes fun to work with.
 For that we build the [Gin Layout Builder](https://www.drupal.org/project/gin_lb) and the Wingsuit Layout Builder Module as part of the [Wingsuit companion module](https://www.drupal.org/project/wingsuit_companion) which integrates [Section Library](https://www.drupal.org/project/section_library) and [Layout Builder Browser](https://www.drupal.org/project/layout_builder_browser).
 Also, we add a lot of new features to [UI Patterns Settings](https://www.drupal.org/project/ui_patterns_settings).
 
-Check out the
+Check out the [Drupal Kickstarter page](/drupal/ui_patterns)
