(feature) Add Wingsuit 1.2 pattern update

--- a/starter-kits/tailwind/apps/storybook/patterns/00-base/colors.stories.mdx
+++ b/starter-kits/tailwind/apps/storybook/patterns/00-base/colors.stories.mdx
@@ -1,10 +1,8 @@
-import { Meta, ColorPalette, ColorItem, Subtitle } from '@storybook/addon-docs/blocks';
+import { Meta, ColorPalette, ColorItem, Subtitle } from '@storybook/addon-docs';
 const tailwindFile = require('../../config/silo/tailwind.json');
 const colors = tailwindFile.tailwind.theme.colors;
 
-<Meta title="Tokens/Colors"
-parameters={{ viewMode: 'docs', previewTabs: { canvas: { hidden: true }}}}
-/>
+<Meta title="Tokens/Colors" id="meta/test"/>
 
 # Colors Matter
 
