--- a/starter-kits/tailwind/apps/storybook/patterns/00-base/icons.stories.mdx
+++ b/starter-kits/tailwind/apps/storybook/patterns/00-base/icons.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta, IconGallery, IconItem, Subtitle } from '@storybook/addon-docs/blocks';
+import { Meta, IconGallery, IconItem, Subtitle } from '@storybook/addon-docs';
 const svgFile = require('../../config/silo/svgs.json');
 const icons = svgFile.svgs;
 
