--- a/starter-kits/tailwind/apps/storybook/patterns/00-base/layout.stories.mdx
+++ b/starter-kits/tailwind/apps/storybook/patterns/00-base/layout.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta, Title, Subtitle, Heading, Subheading } from '@storybook/addon-docs/blocks';
+import { Meta, Title, Subtitle, Heading, Subheading } from '@storybook/addon-docs';
 import { Source } from '@storybook/components';
 import LinkTo from '@storybook/addon-links/react';
 import dedent from 'ts-dedent';
