--- a/starter-kits/tailwind/apps/storybook/patterns/00-base/scales.stories.mdx
+++ b/starter-kits/tailwind/apps/storybook/patterns/00-base/scales.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta } from '@storybook/addon-docs/blocks';
+import { Meta } from '@storybook/addon-docs';
 import { Spacing } from '@wingsuit-designsystem/storybook';
 const tailwindFile = require('../../config/silo/tailwind.json');
 const spacing = tailwindFile.tailwind.theme.spacing;
