--- a/starter-kits/tailwind/apps/storybook/patterns/00-base/typeset.stories.mdx
+++ b/starter-kits/tailwind/apps/storybook/patterns/00-base/typeset.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta, Subtitle } from '@storybook/addon-docs/blocks';
+import { Meta, Subtitle } from '@storybook/addon-docs';
 import { Typeset } from '@wingsuit-designsystem/storybook';
 const tailwindFile = require('../../config/silo/tailwind.json');
 const fontFamilies = tailwindFile.tailwind.theme.fontFamily;
