--- a/starter-kits/tailwind/apps/storybook/patterns/00-base/welcome.stories.mdx
+++ b/starter-kits/tailwind/apps/storybook/patterns/00-base/welcome.stories.mdx
@@ -60,33 +60,35 @@ Design and images from <a href="https://www.drawkit.io/product/peach-illustratio
         Object.keys(namespaces[mode]).map((namespace, i) => {
           const config = namespaces[mode][namespace];
           return (
-            <div>
-            <h2> <img src={config.icon} style={{width: '20px'}}/> {namespace} </h2>
-            <Canvas>
-              {
-              storage.loadPatternsByNamespace(namespace).map((pattern)=>{
-                if (mode === 'docs') {
+            <div key={namespace}>
+              <h2 class="flex flex-row"> <img src={config.icon} style={{width: '20px', marginRight: '16px'}}/> {namespace} </h2>
+              <div style={{marginBottom: '34px'}}>
+                {
+                storage.loadPatternsByNamespace(namespace).map((pattern)=>{
+                  if (mode === 'docs') {
+                    return (
+                      <div style={{marginBottom: '24px'}} key={pattern.getId()}>
+                        <LinkTo story={pattern.getDefaultVariant().getLabel()} kind={`${pattern.getNamespace()}-${pattern.getId()}`}>
+                          <div style={{display: 'flex', width: '100%'}}>
+                            <div style={{width: '20%'}}><img src={pattern.getIconPath()}/></div>
+                            <div class="prose" style={{width: '80%', paddingLeft: '12px'}}>
+                              <h3>{pattern.getLabel()}</h3>
+                              <div>{pattern.getDescription()}</div>
+                            </div>
+                          </div>
+                        </LinkTo>
+                      </div>
+                    )
+                  } else {
                   return (
                     <LinkTo key={pattern.getId()} story={pattern.getDefaultVariant().getLabel()} kind={`${pattern.getNamespace()}-${pattern.getId()}`}>
-                      <div style={{display: 'flex', width: '100%'}}>
-                        <div style={{width: '20%'}}><img src={pattern.getIconPath()}/></div>
-                        <div style={{width: '80%', padding: '8px'}}>
-                          <h3>{pattern.getLabel()}</h3>
-                          <p>{pattern.getDescription()}</p>
-                        </div>
-                      </div>
+                      <Badge status="neutral" style={{marginRight: '8px'}}>{pattern.getLabel()}</Badge>
                     </LinkTo>
                   )
-                } else {
-                return (
-                  <LinkTo key={pattern.getId()} story={pattern.getDefaultVariant().getLabel()} kind={`${pattern.getNamespace()}-${pattern.getId()}`}>
-                    <Badge status="neutral">{pattern.getLabel()}</Badge>
-                  </LinkTo>
-                )
+                  }
+                  })
                 }
-                })
-              }
-            </Canvas>
+              </div>
             </div>
           )
         })
